     * KLoneC (Mickael Auger)
     * KLoneC++ (Mickael Auger)
     * POV-Ray (Carl Fürstenberg)
     * PowerShell (Frode Aarebrot)
     * Progress (Marco Aurelio de Pasqual)
     * TypoScript (Jan-Philipp Halle)
     * Xorg configuration (milian)
  -  set_language will not reset any language settings by default anymore.
     You can use the additional $force_reset param for this. (milian)
  -  setup caches for parsing on demand, makes stylesheet generators fast again (milian)
  -  reduce strict errors & notices for language files (milian)
  -  Fixed symbol highlighting with C++ sometimes missing keywords after ; and comments (BenBE)
  -  Improved comment handling with TCL (Lars Hellström, BenBE)
  -  Removed explicit escaping of / in Regular Expressions (BenBE)
  -  Ignoring empty keyword groups when highlighting (milian)
  -  Broken handling with XML comments (BenBE, SF#1849233)
  -  Some more memory & speed optimizations all over GeSHi (milian)
     * Reduced memory overhead when highlighting keywords (BenBE)
     * Keyword Linking now uses considerably less strtolower calls (milian)
     * Cache Symbol Search Regexp and make Symbol Highlighting faster (milian)
     * Use more native functions like substr_replace and strcasecmp to speed things up (milian)
     * Use considerably less strlen() calls on various points by caching the results (milian)
     * Properly set comments to be case insensitive where appropriate to increase performance (milian)
     * Improve the performance of the strict mode tokenizer, making highlighting of languages like
       HTML, ColdFusion or XML faster (milian)
  -  Added an optimizer for lists in regular expressions. Using these cached lists results in a speedup of approx. 50%.
     The slightly increased memory consumption (~150KB for PHP language file) is more than worth it! (milian)
  -  Added support for external style information files to override language defaults without modifying language files (BenBE)